-Fixed responsiveness (text overflow)

--- a/css/style.css
+++ b/css/style.css
@@ -16,6 +16,7 @@
 	66% {background-position: left center}
 	99% {background-position: center}
 }
+
 /* General styles */
 
 html {
@@ -156,6 +157,8 @@ footer p {
 	background: white;
 }
 
+
+
 /* Positioning images */
 
 #logo {
@@ -219,7 +222,6 @@ footer p {
 	width: 50%;
 	box-sizing: border-box;
 	float: left;
-	height: 715px;
 }
 .food span {
 	display: block;
@@ -264,7 +266,7 @@ dd,
 .story-impact {
 	padding-left: 10px;
 	padding-right: 10px;
-	text-align: justify;
+	text-align: center;
 }
 
 .story-impact h4 {
@@ -285,7 +287,7 @@ dd,
 /* Specialized font sizes */
 
 #small-pizza {
-	font-size: 1em;
+	font-size: 1.2em;
 }
 
 #med-pizza {
@@ -355,6 +357,8 @@ nav a:hover,
 
 	.column {
 		width: 100%;
+		height: 100%;
+		padding-bottom: 15px;
 	}
 
 	nav ul li,
@@ -366,12 +370,14 @@ nav a:hover,
 
 	.pizzas {
 		width: 100%;
-		height: 675px;
-		clear: both;
 	}
 
 	.food h4 {
 		font-size: 1.7em;
+	}
+
+	#contact-info {
+		font-size: .8em;
 	}
 }
 
@@ -384,6 +390,16 @@ nav a:hover,
 	address {
 		font-size: 1.4em;
 	}
+
+	.pizzas {
+		height: 700px;
+	}
+}
+
+@media screen and (min-width: 820px) {
+	.pizzas {
+		height: 690px;
+	}
 }
 
 @media screen and (min-width: 1000px) {
@@ -394,6 +410,7 @@ nav a:hover,
 	.pizzas {
 		height: 650px;
 	}
+
 }
 
 @media screen and (min-width: 1280px) {
